<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CollectionsActivity">

    <ScrollView
        android:id="@+id/create_collection_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/create_collection_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#787878"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/newCollection"
                app:titleTextColor="#ffffff">

                <SearchView
                    android:id="@+id/new_collection_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:iconifiedByDefault="true"
                    android:visibility="visible"
                    android:inputType="text"
                    android:theme="@style/AppTheme.WhiteToolbar"
                />
            </androidx.appcompat.widget.Toolbar>

            <EditText
                android:id="@+id/new_collection_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Title"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article_to_choose_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layoutManager="LinearLayoutManager" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/create_collection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/ready" />

</androidx.constraintlayout.widget.ConstraintLayout>