<resources>
    <string name="app_name">BingoCHGK</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_collections">CollectionsActivity</string>

    <string name="license">
        <htmlData><![CDATA[
    </div>            <h1 class="title">Лицензия на использование вопросов из Базы Вопросов Интернет-клуба &quot;Что? Где? Когда?&quot;</h1>            <div class="tabs"></div>
    <!-- node -->
    <div id="node-2" class="node odd full-node node-type-page">



        <div class="content">
           <hr>
                <p>
                    Интернет-клуб "Что? Где? Когда?" предоставляет пользователям Базы Вопросов право:
<ul>
<li>использовать эти вопросы (1) для тренировок и проведения турниров
местного характера при условии, что указывается с полным URL (2) их
источник - База Вопросов Интернет-клуба "Что? Где? Когда?";

<li>публиковать эти вопросы в традиционных и электронных средствах
массовой информации в некоммерческих целях при условии, что указывается с
полным URL их источник - База Вопросов Интернет-клуба "Что? Где? Когда?";
<li>распространять любой пакет вопросов из Базы Вопросов, в том числе и
случайно сгенерированный (3), по желанию пользователя при условии, что в
него не вносятся посторонние вопросы, указывается с полным URL их
источник - База Вопросов Интернет-клуба "Что? Где? Когда?" и прилагается
текст данной Лицензии.
</ul>

<strong>Предупреждение:</strong>
подавляющее большинство вопросов Базы Вопросов были играны
или другим образом распространялись по многим городам как в СССР/СНГ, так и
за его пределами. Подавляющее большинство вопросов Базы Вопросов собрано из
общедоступных источников, не предохраненных авторским правом, или же с
разрешения держателей авторского права на распространение вопросов в сети
Интернет. В связи с этим Интернет-клуб "Что? Где? Когда?" не несет никакой
ответственности за:
<ul>
<li>использование вопросов Базы Вопросов в турнирах;
<li>корректность вопросов в Базе Вопросов;
<li>проблемы с авторскими правами, возникающие между пользователями Базы
  Вопросов и авторами вопросов.
</ul>

В соответствии с настоящей Лицензией НЕ ДОПУСКАЕТСЯ:
<ul>
<li>внесение любых изменений в содержание этих вопросов;
<li>использование этих вопросов для индивидуальных или командных взносов
  пользователей в оргкомитеты турниров;

<li>любое использование этих вопросов без указания с полным URL их источника -
  Базы Вопросов Интернет-клуба "Что? Где? Когда?";
<li>распространение любых пакетов из Базы Вопросов, в том числе и случайно
  сгенерированных, без приложения текста данной Лицензии;
<li>любое использование этих вопросов с коммерческой целью;
<li>использование материалов этих вопросов для написания любых текстов с
  коммерческой целью.
</ul>

<strong>
Примечания
</strong>
<ol>
<li>Под словом "Вопрос" в данной Лицензии подразумевается полный текст
полей "Вопрос", "Ответ", "Источник" и "Автор" в Базе Вопросов.
<li>http://db.chgk.info
<li>Распространение вопросов из тренировочного пакета клуба "Мозговорот"
допускается только на основе <a href="/copyright_mozg">Лицензии</a>, прилагаемой к означенному пакету. <br>
<li>Распространение вопросов Ильи Бера допускается на основе лицензии <a href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>.<br>
<li>Распространение вопросов Александра Печеного, Владислава Короля и Владимира Цвингли допускается на основе лицензии <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">BY-NC-SA 4.0</a>.<br>
<li>Распространение вопросов Ксении и Эдуарда Шагалов, Ильи Немца, Бориса Окуня, Андрея Петухова, Ивана Семушина, команды «Борский корабел», Павла Солахяна, Владимира Островского, Максима Мерзлякова, Александра Коробейникова, Сергея Спешкова, Виктории Маландиной, Эдуарда Голуба, Артёма Гулецкого, Марии Подрядчиковой, Евгения Сибиряка, Андрея Солдатова, Мансура Зиятдинова, команды «Зигзаг», Александра Рождествина, Ивана Топчия, Андрея Тананы, Дмитрия Буценца, Дмитрия Некрылова, Виталия Паутова (и турниры под его редактурой), Алексея Гончарова, Вадима Ермака, Юрия Разумова, Алексея Сильвестрова, Алексея Шматкова, Дмитрия Дорожко, Александра Демяненко, Александра Карясова, Алексея Бороненко и Натальи Яковлевой (а также турниры под их редактурой), Серафима Шибанова, Руслана Алиева (и турниры под его редактурой), Владимира Осипчука, Артёма Матухно, Вячеслава Гарановича, Екатерины Лобковой, Константина Брифа (а также турниры под его редактурой), Ивана Ерёмина (а также турниры под его редактурой), Вадима Кузмича допускается на основе лицензии <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.
<li>Вопросы турниров «Кубок Физтеха» и «Малый кубок Физтеха», начиная с 2015 года, могут использоваться только на некоммерческой основе.
</ol>

<address>
По всем вопросам, связанным с использованием Базы Вопросов, просьба
обращаться к <a href="mailto:kostyaknop@gmail.com">Константину Кнопу</a>.
</address>

<i>1997-2020</i>
        </div>
     ]]>
    </htmlData>
    </string>

    <string name="authors">
        <htmlData>
            <![CDATA[
        Почта для связи: <a href="mailto:bingochgk@gmail.com"> bingochgk@gmail.com </a><br />
        <a href=\"http://t.me/drazumova\">Разумова Дарья</a><br />
        <a href=\"http://t.me/vvitaliis\">Селищев Виталий</a><br />
        <a href=\"http://t.me/smirnov_i\">Смирнов Игорь</a><br />
        ]]>
        </htmlData>
    </string>

    <string name="defaultQuestion">
        По какой-то причине мы не смогли получить вопрос из базы.
        Попробуйте перезагрузить приложение.
    </string>

    <string name="sources">
        <htmlData><![CDATA[
        <p><strong><br />
                Источники<br />
            </strong></p>
            <ol>
                <li><a href="http://db.chgk.info">http://db.chgk.info</a>
            </li>
                <li><a href="https://vk.com/bingopark">https://vk.com/bingopark</a>
            </li>
            </ol>
            ]]>
        </htmlData>
    </string>
    <string name="ArticleName">Название темы</string>
    <string name="writeArticleName">Введите название</string>
    <string name="createArticle">Создать тему</string>
    <string name="uploadQuestions">Загрузить вопросы</string>
    <string name="deleteTopic">Удалить тему</string>
    <string name="uploadQuestionsByTopic">Подгрузить вопросы по теме</string>
    <string name="cannotUploadQuestions">Не удалось подгрузить вопросы</string>
    <string name="uploadQuestionsText">Подгрузить вопросы</string>
    <string name="questionsDownloaded">Вопросы успешно загружены</string>
    <string name="collection42">Поброка 42</string>
    <string name="topicName">Название темы</string>
    <string name="licenseName">Лицензия</string>
    <string name="authorsName">Авторы</string>
    <string name="sourcesName">Источники</string>
    <string name="additionalMaterial">Раздаточный материал</string>
    <string name="question">Вопрос</string>
    <string name="writeAnswer">Введите ответ</string>
    <string name="readyButton">Готово!</string>
    <string name="answer">Ответ</string>
    <string name="comment">Комментарий</string>
    <string name="ok">Засчитать</string>
    <string name="nook">Не засчитать</string>
    <string name="nextQuestion">Следующий вопрос</string>
    <string name="appTitle">ЧГК Бинго</string>
    <string name="allTopicsA">Все статьи</string>
    <string name="Title">Название</string>
    <string name="ready">Готово</string>
    <string name="playQuestionsByCollection">Играть вопросы по подборке</string>
    <string name="savedQuestion">Сохранённый вопрос</string>
    <string name="randomQuestion">Случайный вопрос</string>
    <string name="rightAnswer">Это правильный ответ!</string>
    <string name="wrongAnswer">Это неправильный ответ</string>
    <string name="toArticle">Перейти к статье</string>
    <string name="yourAnswer">Ваш ответ: </string>
    <string name="allTopics">Все темы</string>
    <string name="removeCollection">"Удалить подборку"</string>
    <string name="newCollection">Новая подборка</string>
</resources>
