...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionActivity">

    <ScrollView
        android:id="@+id/question_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:background="#787878"
                app:titleTextColor="#ffffff"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <ImageButton
                    android:id="@+id/to_next_question_button_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_right_arrow" />

...

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>

                <TextView
                    android:id="@+id/questionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputAnswerLayout"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/answerInputField"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/writeAnswer"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
...

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp"/>

                    <Button
                        android:id="@+id/answerButton"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/readyButton"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
...
